[FIX] re-fix weird behavior of Firefox where text punches out of buttons if white-space nowrap and width 100% but not enough room
lp bug: https://launchpad.net/bugs/917551 fixed

bzr revid: xmo@openerp.com-20120117151051-m3l2lo7fiykcbv4t

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1418,7 +1418,7 @@ label.error {
 }
 @-moz-document url-prefix() {
     /* Strange firefox behaviour on width: 100% + white-space: nowrap */
-    .openerp .oe_forms .oe_button {
+    .openerp .oe_forms .oe_form_button .oe_button {
         width: auto;
     }
 }
